# Recipe-Gen

./: app.py  pyproject.toml  test.ipynb
src/api/: spoonacular_integration.py
src/rag/: embeddings.py  llm.py  pipeline.py  utils.py  vectorstore.py
