[project]
name = "recipe-gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "g4f>=0.5.2.8",
    "ipykernel>=6.29.5",
    "langchain-community>=0.3.20",
    "langchain-openai>=0.3.17",
    "langchain>=0.3.21",
    "openai>=1.79.0",
    "python-dotenv>=1.0.1",
    "qdrant-client>=1.14.2",
    "requests>=2.32.3",
    "sentence-transformers>=3.4.1",
    "streamlit>=1.43.2",
    "tiktoken>=0.9.0",
]
